docs/deliverables/aws-infrastructure/aws-backup/vpc/security-group-sg-0ca13c80fa10269ae.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0ca13c80fa10269ae",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-09e709231c8fc946d",
            "SecurityGroupArn": "arn:aws:ec2:us-east-2:625246225347:security-group/sg-0ca13c80fa10269ae",
            "OwnerId": "625246225347",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 5432,
                    "ToPort": 5432,
                    "UserIdGroupPairs": [
                        {
                            "UserId": "625246225347",
                            "GroupId": "sg-0ca13c80fa10269ae"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "625246225347",
                            "GroupId": "sg-0ca13c80fa10269ae"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
